--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}"
-  class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
-  (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
-
-{{ partial "head/head.html" . }}
-
-
-<body>
-  <div class="main-container">
-    {{ partial "header.html" . }}
-
-
+{{ define "main" }}
     <main role="main" id="conteudo" class="internal-page">
       <section class="section">
-        <div class="container container--narrow ">
-          <div>
+        <div class="container">
+          <div class="two-columns">
+            <div class="section-image">
+              <img src="/uploads/images/ilustracao-mensagem.png" alt="{{ i18n " title404" }}" />
+            </div>
             <div class="rich-text">
               <h2 class="title">{{.Title}}</h2>
               </p>
@@ -74,9 +65,4 @@
         </div>
       </section>
     </main>
-
-    {{ partial "footer.html" . }}
-  </div>
-</body>
-
-</html>
+{{ end }}
