--- a/layouts/authors/list.html
+++ b/layouts/authors/list.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}"
-  class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
-  (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
-
-{{ partial "head/head.html" . }}
-
-
-<body>
-  <div class="main-container">
-    {{ partial "header.html" . }}
-
+{{ define "main" }}
     <main role="main" id="conteudo" class="internal-page">
       <div class="container">
         <div class="three-columns">
@@ -49,13 +38,9 @@
 
           </div>
           {{ end }}
+
         </div>
 
       </div>
     </main>
-
-    {{ partial "footer.html" . }}
-  </div>
-</body>
-
-</html>
+{{ end }}
