--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}"
-  class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
-  (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
-
-{{ partial "head/head.html" . }}
-
-
-<body>
-  <div class="main-container">
-    {{ partial "header.html" . }}
-
-
+{{ define "main" }}
     <div class="container">
       {{ partial "breadcrumbs.html" . }}
     </div>
@@ -88,9 +76,4 @@
         </div>
       </div>
     </main>
-
-    {{ partial "footer.html" . }}
-  </div>
-</body>
-
-</html>
+{{ end }}
