--- a/layouts/college/list.html
+++ b/layouts/college/list.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}" class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get "rootClass" }} {{ .Params.rootClass }} {{ if eq (getenv "NODE_ENV") "development" }}grid-debug{{ end }} no-js">
-
-  {{ partial "head/head.html" . }}
-
-
-  <body>
-    <div class="main-container">
-      {{ partial "header.html" . }}
-
-
+{{ define "main" }}
       <div class="container">
         {{ partial "breadcrumbs.html" . }}
       </div>
@@ -39,8 +29,4 @@
           </div>
         </div>
       </main>
-
-      {{ partial "footer.html" . }}
-    </div>
-  </body>
-</html>
+{{ end }}
