--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang=" {{ with .Site.Language.Params.locale }}{{ . }}{{ else }}{{ .Site.LanguageCode }}{{ end }}"
-  class="{{ if .IsHome }}home-page {{ end }}{{ $.Scratch.Get " rootClass" }} {{ .Params.rootClass }} {{ if eq
-  (getenv "NODE_ENV" ) "development" }}grid-debug{{ end }} no-js">
-
-{{ partial "head/head.html" . }}
-
-
-<body>
-  <div class="main-container">
-    {{ partial "header.html" . }}
-
-
+{{ define "main" }}
     <main role="main" id="conteudo" class="info-page">
       <section class="section">
         <div class="container">
@@ -27,9 +15,4 @@
   </div>
   </section>
   </main>
-
-  {{ partial "footer.html" . }}
-  </div>
-</body>
-
-</html>
+{{ end }}
