--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -13,7 +13,7 @@
     <label for="menu-controller" onclick></label>
 
     <div class="logo logo-{{ .Site.LanguageCode  | lower }}">
-      <a href="/{{ .Site.LanguagePrefix }}"><img src="/images/youbet.svg" alt="YouBet!" /></a>
+      <a href="/{{ .Site.LanguagePrefix }}"><img src="/uploads/images/youbet.svg" alt="YouBet!" /></a>
     </div>
 
     {{ if .Site.Menus.main }}
