feat: create layout for programs pages

--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -4,7 +4,7 @@
       {{ i18n "blog" }}
     </h2>
 
-    <div class="glide">
+    <div class="glide glide-blog">
       <div class="glide__arrows" data-glide-el="controls">
         <button class="glide__arrow glide__arrow--left" data-glide-dir="<"></button>
         <button class="glide__arrow glide__arrow--right" data-glide-dir=">"></button>
