--- a/layouts/programs/single.html
+++ b/layouts/programs/single.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
-
+{{ $data := index .Site.Data .Site.Language.Lang }}
+{{ $faq := .Params.faq }}
   <style>
     .page-title {
       {{ if .Params.backgroundColor }} background-color:  {{ .Params.backgroundColor }}; {{ end }}
@@ -27,77 +28,164 @@
         <h1>{{ .Title }}</h1>
       </div>
     </div>
-
+<!--
     <div class="container">
-      {{ partial "breadcrumbs.html" . }}
-    </div>
+    {{ partial "breadcrumbs.html" . }}
+    </div> -->
 
-  <main role="main" id="conteudo" class="internal-page">
+  <main role="main" id="conteudo" class="internal-page internal-page--programs">
 
-    <section class="section">
+    <article>
       <div class="container">
-        <img src="/uploads/images/grupo-estudantes.jpeg" alt="{{ i18n " title404" }}" class="image-top"/>
+        {{ if .Params.mainImage }}
 
-        <div class="two-columns">
+          <picture>
+            <source media="(min-width: 1000px)" srcset="/uploads/images/{{.Params.mainImage}}--1131X0.webp">
+            <source media="(min-width: 800px)" srcset="/uploads/images/{{.Params.mainImage}}--900X0.webp">
+            <source media="(min-width: 500px)" srcset="/uploads/images/{{.Params.mainImage}}--800X0.webp">
+            <source media="(min-width: 300px)" srcset="/uploads/images/{{.Params.mainImage}}--500X0.webp">
+            <img src="/uploads/images/{{.Params.mainImage}}.jpeg" class="img-fluid main-img"  width="1131" height="518" alt="{{.Params.mainImageAlt}}">
+          </picture>
+
+        {{ end }}
+
+        <div class="two-columns two-columns--sidebar">
           <div class="rich-text">
 
             {{ .Content }}
 
-            <div>
-              <a href="/contato" class="button-secondary button-secondary--solid">Fale com nossos especialistas</a>
-            </div>
+            <a href="#contato" class="button-secondary button-secondary--solid">{{ i18n "getAQuote" }}</a>
+
 
           </div>
 
           <div class="rich-text">
-            <table>
+            <table class="table--details table--wide">
+              <thead>
+                <tr>
+                    <th colspan="2">Detalhes</th>
+                </tr>
+            </thead>
               <tbody>
+                {{if .Params.accommodations}}
                 <tr>
                   <th>
-                    {{ i18n "minimumTime" }}
-                  </th>
-                  <td>
-                    {{.Params.minimumTime}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>
-                    {{ i18n "age" }}:
-                  </th>
-                  <td>
-                    {{.Params.age}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>
-                    {{ i18n "accommodations" }}:
+                    {{ i18n "accommodations" }}
                   </th>
                   <td>
                     {{.Params.accommodations}}
                   </td>
                 </tr>
+
+                {{end }}
+                {{if .Params.feeding}}
                 <tr>
                   <th>
-                    {{ i18n "feeding" }}:
+                    {{ i18n "feeding" }}
                   </th>
                   <td>
                     {{.Params.feeding}}
                   </td>
                 </tr>
+                {{end }}
+
+                {{if .Params.term}}
                 <tr>
                   <th>
-                    {{ i18n "languageLevel" }}:
+                    {{ i18n "term" }}
+                  </th>
+                  <td>
+                    {{.Params.term}}
+                  </td>
+                </tr>
+                {{ end }}
+                {{if .Params.age}}
+                <tr>
+                  <th>
+                    {{ i18n "age" }}
+                  </th>
+                  <td>
+                    {{.Params.age}}
+                  </td>
+                </tr>
+                {{end }}
+
+                {{if .Params.languageLevel}}
+                <tr>
+                  <th>
+                    {{ i18n "languageLevel" }}
                   </th>
                   <td>
                     {{.Params.languageLevel}}
                   </td>
                 </tr>
+                {{end }}
+                {{if .Params.scholarship}}
+                <tr>
+                  <th>
+                    {{ i18n "scholarship" }}
+                  </th>
+                  <td>
+                    {{.Params.scholarship}}
+                  </td>
+                </tr>
+                {{end }}
               </tbody>
             </table>
           </div>
         </div>
+      </div>
+    </article>
+    <article>
+      <div class="container">
+        <div class="two-columns align-items--center">
+          <div class="rich-text">
+            {{ if .Params.mainImage }}
+            <img src="/uploads/images/{{.Params.whatIsIncludedImage}}.png" class="img-fluid"   alt="{{.Params.whatIsIncludedImageAlt}}">
 
-        <form name="summer" action="/contato/sucesso/" method="POST" data-netlify="true">
+
+          {{ end }}
+
+          </div>
+          <div class="rich-text">
+            <h2>{{ i18n "whatIsIncluded" | title }}</h2>
+            {{ range ( .Params.included ) }}
+            <ul>
+              <li>
+                {{ . }}
+              </li>
+            </ul>
+            {{ end }}
+            </div>
+          </div>
+        </div>
+
+
+    </article>
+
+    {{ with $data.faq.summer }}
+      <article class="h-entry faq">
+        <div class="container">
+          <h2 class="title-section">{{ i18n "commonQuestions" | title }}</h2>
+
+          <div class="questions">
+          {{ range . }}
+          <details>
+            <summary>
+              {{ .question | safeHTML | markdownify }}
+            </summary>
+            <p>{{ .answer }}</p>
+          </details>
+        {{ end }}
+          </div>
+        </div>
+      </article>
+    {{ end }}
+
+    <article class="contact-form">
+      <div class="container container--narrow ">
+        <h2 class="title-section">{{ i18n "getAQuote" }}</h2>
+        <form id="contato" name="{{.Params.formId}}" action="/contato/sucesso/" method="POST" data-netlify="true">
           <div class="form-wrap">
             <div class="two-columns">
               <div class="form-group ">
@@ -140,7 +228,7 @@
               </label>
               <textarea id="message" name="message" required></textarea>
             </div>
-            <div class="button-wrap">
+            <div class="button-wrap button-wrap--center">
               <button type="submit" class="button-secondary button-secondary--solid">{{ i18n "send" }}</button>
             </div>
           </div>
@@ -148,7 +236,7 @@
         </form>
 
       </div>
-    </section>
+    </article>
 
   </main>
 
