--- a/assets/stylesheets/components/_button.scss
+++ b/assets/stylesheets/components/_button.scss
@@ -83,6 +83,11 @@ $colors: 'button', 'button-secondary', 'button-neutral';
   }
 }
 
+.button-wrap--center {
+  display: flex;
+  justify-content: center;
+}
+
 button,
 [role='button'],
 [type='button'] {
@@ -120,7 +125,6 @@ button,
       }
     }
 
-    &--disabled,
     &:disabled {
       color: palette('white');
 
@@ -149,7 +153,6 @@ button,
       }
     }
 
-    &--disabled,
     &:disabled {
       color: palette(#{$color}, 'light');
 
@@ -177,7 +180,6 @@ button,
       }
     }
 
-    &--disabled,
     &:disabled {
       color: palette(#{$color}, 'light');
 
@@ -203,7 +205,6 @@ button,
       }
     }
 
-    &--disabled,
     &:disabled {
       color: palette(#{$color}, 'light');
 
@@ -229,7 +230,6 @@ button,
       }
     }
 
-    &--disabled,
     &:disabled {
       color: palette(#{$color}, 'light');
 
@@ -248,7 +248,6 @@ button,
       }
     }
 
-    &--disabled,
     &:disabled {
       color: palette(#{$color}, 'disabled');
     }
