--- a/assets/stylesheets/layout/_table.scss
+++ b/assets/stylesheets/layout/_table.scss
@@ -1,5 +1,14 @@
 /* TABLES
 ============================================================================ */
+
+.table--wide {
+  width: 100%;
+}
+
+.table--details {
+  // background: palette('gray', '5%');
+}
+
 table,
 thead,
 tbody,
@@ -8,32 +17,27 @@ tr,
 th,
 td {
   width: auto;
-
   height: auto;
 
   font-size: 1em;
+  font-family: $text-font-stack;
 
   vertical-align: top;
+
   background-color: transparent;
+
   border: 0;
 
-  @media screen and (max-width: #{map-get($breakpoints, 'toggle-table-layout') - 0.01}) {
+  @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
     display: block;
   }
 }
 
 table {
-  margin-top: 0;
-  margin-right: 0;
-
-  margin-bottom: #{$leading * 1em};
-
-  margin-left: 0;
   font-size: 100%;
-
   font-family: inherit;
   font-feature-settings: 'kern' 1, 'liga' 1, 'calt' 1, 'pnum' 0, 'tnum' 1, 'onum' 0, 'lnum' 1, 'dlig' 0;
-  border-radius: $rounded-corner;
+
   border-collapse: separate;
   border-spacing: 0;
   empty-cells: show;
@@ -41,9 +45,15 @@ table {
 
 thead,
 tfoot {
-  @media screen and (max-width: #{map-get($breakpoints, 'toggle-table-layout') - 0.01}) {
-    display: none;
-  }
+  font-family: $title-font-stack;
+
+  text-transform: uppercase;
+}
+
+.table--details thead th {
+  text-align: center;
+  background: palette('orange', 'base');
+  padding: 1rem;
 }
 
 table p,
@@ -55,23 +65,63 @@ table li {
 // }
 
 tr {
-  @media screen and (max-width: #{map-get($breakpoints, 'toggle-table-layout') - 0.01}) {
-    @include fallback('margin', 0 0 1.5rem);
-
+  @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
     &:last-child {
       margin-bottom: 0;
     }
   }
 }
 
+tbody {
+  & th,
+  & td {
+    padding: to-rem(8px) to-rem(4px);
+
+    @media screen and (min-width: breakpoint('tablet')) {
+      border-bottom: 1px solid palette('gray', '10%');
+      padding: to-rem(20px) to-rem(8px);
+    }
+  }
+  & td {
+    text-align: right;
+
+    font-variant-numeric: lining-nums oldstyle-nums;
+
+    @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
+      text-align: left;
+
+      &[aria-label] {
+        text-align: right;
+
+        &::before {
+          float: left;
+
+          font-style: italic;
+
+          content: attr(aria-label) ': ';
+        }
+      }
+    }
+    @media screen and (min-width: breakpoint('desktop')) {
+      border-right: 1px solid palette('gray', '10%');
+    }
+  }
+  & th {
+    text-align: left;
+    @media screen and (min-width: breakpoint('desktop')) {
+      border-left: 1px solid palette('gray', '10%');
+    }
+  }
+}
+
 th {
-  font-weight: font-weights('bold');
+  font-weight: bold;
 }
 
 td {
   font-family: inherit;
 
-  @media screen and (max-width: #{map-get($breakpoints, 'toggle-table-layout') - 0.01}) {
+  @media screen and (max-width: #{get($breakpoints, 'toggle-table-layout') - 0.01}) {
     &:empty {
       display: none;
     }
@@ -83,43 +133,15 @@ thead td {
   vertical-align: bottom;
 }
 
-thead th:first-child,
-tfoot th:first-child {
-  text-align: left;
-}
+// thead th:first-child,
+// tfoot th:first-child {
+//   text-align: left;
+// }
 
 // thead > tr:nth-last-of-type(odd) > th,
 // thead > tr:nth-last-of-type(odd) > td {
 // }
 
-tbody {
-  font-family: mono-space, monospace;
-}
-
-tbody th {
-  text-align: left;
-}
-
-tbody td {
-  font-variant-numeric: lining-nums oldstyle-nums;
-
-  text-align: right;
-
-  @media screen and (max-width: #{map-get($breakpoints, 'toggle-table-layout') - 0.01}) {
-    text-align: left;
-
-    &[aria-label] {
-      text-align: right;
-
-      &::before {
-        float: left;
-
-        font-style: italic;
-        content: attr(aria-label) ': ';
-      }
-    }
-  }
-}
 
 td img {
   vertical-align: top;
@@ -127,9 +149,7 @@ td img {
 
 tbody tr:nth-of-type(odd) > th,
 tbody tr:nth-of-type(odd) > td {
-  @media screen and (max-width: #{map-get($breakpoints, 'toggle-table-layout') - 0.01}) {
-    background-color: transparent;
-  }
+  background-color: palette('orange', '10%');
 }
 
 tfoot th,
