--- a/assets/stylesheets/layout/_main.scss
+++ b/assets/stylesheets/layout/_main.scss
@@ -29,6 +29,32 @@ main,
   flex: 1;
 }
 
+.internal-page {
+  article {
+    padding-top: to-rem(48px);
+    padding-bottom: to-rem(48px);
+
+    @media screen and (min-width: breakpoint('tablet')) {
+      padding-top: to-rem(80px);
+      padding-bottom: to-rem(80px);
+    }
+  }
+
+  & section {
+    padding-top: to-rem(32px);
+    padding-bottom: to-rem(32px);
+
+    @media screen and (min-width: breakpoint('desktop')) {
+      padding-top: to-rem(80px);
+      padding-bottom: to-rem(80px);
+    }
+  }
+
+  &--programs article:nth-of-type(even) {
+    background-color: palette('orange', '5%');
+  }
+}
+
 .container {
   width: 100%;
   max-width: $max-width;
