--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -7,5 +7,5 @@
 {{ else if not .p1.IsHome }}
 {{ template "breadcrumbnav" (dict "p1" .p1.Site.Home "p2" .p2 )  }}
 {{ end }}
-  <a {{ if eq .p1 .p2 }} class="active"{{ end }} href="{{ .p1.Permalink }}">{{ .p1.Title | title}}</a>
+  <a {{ if eq .p1 .p2 }} class="active"{{ end }} href="{{ .p1.Permalink }}">{{ .p1.Title }}</a>
 {{ end }}
