--- a/assets/stylesheets/base/_helpers.scss
+++ b/assets/stylesheets/base/_helpers.scss
@@ -176,7 +176,7 @@ textarea {
 
   row-gap: $gutter;
 
-  @media screen and (min-width: breakpoint('tablet__portrait')) {
+  @media screen and (min-width: breakpoint('tablet')) {
     grid-template-columns: 1fr 1fr;
 
     column-gap: to-rem(24px);
@@ -185,8 +185,22 @@ textarea {
   }
 }
 
+.two-columns--list {
+  @media screen and (min-width: breakpoint('phone__landscape')) {
+    grid-template-columns: 1fr 1fr;
+
+    column-gap: to-rem(24px);
+
+    row-gap: to-rem(32px);
+  }
+
+  @media screen and (min-width: breakpoint('tablet')) {
+    column-gap: to-rem(32px);
+  }
+}
+
 .two-columns--sidebar {
-  @media screen and (min-width: breakpoint('tablet__portrait')) {
+  @media screen and (min-width: breakpoint('tablet')) {
     grid-template-columns: 1.5fr 1fr;
 
     column-gap: to-rem(32px);
@@ -226,7 +240,7 @@ textarea {
 
   row-gap: $gutter;
 
-  @media screen and (min-width: breakpoint('tablet__portrait')) {
+  @media screen and (min-width: breakpoint('tablet')) {
     grid-template-columns: 1fr 1fr;
 
     column-gap: to-rem(24px);
@@ -259,7 +273,7 @@ textarea {
   .two-columns {
     row-gap: to-rem(12px);
 
-    @media screen and (min-width: breakpoint('tablet__portrait')) {
+    @media screen and (min-width: breakpoint('tablet')) {
 
       column-gap: to-rem(12px);
 
