--- a/layouts/programs/single.html
+++ b/layouts/programs/single.html
@@ -9,7 +9,7 @@
     .page-title::before {
       {{ if .Params.backgroundRepeat }} background-repeat:  {{ .Params.backgroundRepeat }}; {{ end }}
       {{ if .Params.backgroundImage}} background-image: url('{{.Params.backgroundImage}}'); {{ end }}
-      {{ if .Params.backgroundCover}} max-width: unset; {{ end }}
+      {{ if not .Params.backgroundMaxWidth }} max-width: unset; {{ end }}
       {{ if .Params.backgroundSize }} background-size: {{ .Params.backgroundSize }}; {{ end }}
       {{ if .Params.backgroundPosition}} background-position: {{ .Params.backgroundPosition}}; {{ end }}
     }
@@ -21,223 +21,211 @@
         }
       }
     {{ end }}
+    {{ if .Params.titleColor}}
+        .page-title h1  {
+          color: {{.Params.titleColor}};
+        }
+    {{ end }}
   </style>
 
-    <div class='page-title {{ if .Params.Dark }} page-title--dark {{ end }}'>
-      <div class="container">
-        <h1>{{ .Title }}</h1>
-      </div>
-    </div>
-<!--
+<div class='page-title'>
+  <div class="container">
+    <h1>{{ .Title }}</h1>
+  </div>
+</div>
+
+<div class="container">
+  {{ partial "breadcrumbs.html" . }}
+</div>
+
+<main role="main" id="conteudo" class="internal-page internal-page--programs">
+  <article>
     <div class="container">
-    {{ partial "breadcrumbs.html" . }}
-    </div> -->
+      {{ if .Params.mainImage }}
 
-  <main role="main" id="conteudo" class="internal-page internal-page--programs">
+      <picture>
+        <source media="(min-width: 1000px)" srcset="/uploads/images/{{.Params.mainImage}}--1131X0.webp">
+        <source media="(min-width: 800px)" srcset="/uploads/images/{{.Params.mainImage}}--900X0.webp">
+        <source media="(min-width: 500px)" srcset="/uploads/images/{{.Params.mainImage}}--800X0.webp">
+        <source media="(min-width: 300px)" srcset="/uploads/images/{{.Params.mainImage}}--500X0.webp">
+        <img src="/uploads/images/{{.Params.mainImage}}.jpeg" class="img-fluid main-img" width="1131" height="518"
+          alt="{{.Params.mainImageAlt}}">
+      </picture>
 
-    <article>
-      <div class="container">
-        {{ if .Params.mainImage }}
+      {{ end }}
 
-          <picture>
-            <source media="(min-width: 1000px)" srcset="/uploads/images/{{.Params.mainImage}}--1131X0.webp">
-            <source media="(min-width: 800px)" srcset="/uploads/images/{{.Params.mainImage}}--900X0.webp">
-            <source media="(min-width: 500px)" srcset="/uploads/images/{{.Params.mainImage}}--800X0.webp">
-            <source media="(min-width: 300px)" srcset="/uploads/images/{{.Params.mainImage}}--500X0.webp">
-            <img src="/uploads/images/{{.Params.mainImage}}.jpeg" class="img-fluid main-img"  width="1131" height="518" alt="{{.Params.mainImageAlt}}">
-          </picture>
+      <div class="two-columns two-columns--sidebar">
+        <div class="rich-text">
 
-        {{ end }}
+          {{ .Content }}
 
-        <div class="two-columns two-columns--sidebar">
-          <div class="rich-text">
-
-            {{ .Content }}
-
-            <a href="#contato" class="button-secondary button-secondary--solid">{{ i18n "getAQuote" }}</a>
+          <a href="#contato" class="button-secondary button-secondary--solid">{{ i18n "getAQuote" }}</a>
 
 
-          </div>
+        </div>
 
-          <div class="rich-text">
-            <table class="table--details table--wide">
-              <thead>
-                <tr>
-                    <th colspan="2">Detalhes</th>
-                </tr>
+        <div class="rich-text">
+          <table class="table--details table--wide">
+            <thead>
+              <tr>
+                <th colspan="2">Detalhes</th>
+              </tr>
             </thead>
-              <tbody>
-                {{if .Params.accommodations}}
-                <tr>
-                  <th>
-                    {{ i18n "accommodations" }}
-                  </th>
-                  <td>
-                    {{.Params.accommodations}}
-                  </td>
-                </tr>
+            <tbody>
+              {{if .Params.accommodations}}
+              <tr>
+                <th>
+                  {{ i18n "accommodations" }}
+                </th>
+                <td>
+                  {{.Params.accommodations}}
+                </td>
+              </tr>
 
-                {{end }}
-                {{if .Params.feeding}}
-                <tr>
-                  <th>
-                    {{ i18n "feeding" }}
-                  </th>
-                  <td>
-                    {{.Params.feeding}}
-                  </td>
-                </tr>
-                {{end }}
+              {{end }}
+              {{if .Params.feeding}}
+              <tr>
+                <th>
+                  {{ i18n "feeding" }}
+                </th>
+                <td>
+                  {{.Params.feeding}}
+                </td>
+              </tr>
+              {{end }}
 
-                {{if .Params.term}}
-                <tr>
-                  <th>
-                    {{ i18n "term" }}
-                  </th>
-                  <td>
-                    {{.Params.term}}
-                  </td>
-                </tr>
-                {{ end }}
-                {{if .Params.age}}
-                <tr>
-                  <th>
-                    {{ i18n "age" }}
-                  </th>
-                  <td>
-                    {{.Params.age}}
-                  </td>
-                </tr>
-                {{end }}
+              {{if .Params.term}}
+              <tr>
+                <th>
+                  {{ i18n "term" }}
+                </th>
+                <td>
+                  {{.Params.term}}
+                </td>
+              </tr>
+              {{ end }}
+              {{if .Params.age}}
+              <tr>
+                <th>
+                  {{ i18n "age" }}
+                </th>
+                <td>
+                  {{.Params.age}}
+                </td>
+              </tr>
+              {{end }}
 
-                {{if .Params.languageLevel}}
-                <tr>
-                  <th>
-                    {{ i18n "languageLevel" }}
-                  </th>
-                  <td>
-                    {{.Params.languageLevel}}
-                  </td>
-                </tr>
-                {{end }}
-                {{if .Params.scholarship}}
-                <tr>
-                  <th>
-                    {{ i18n "scholarship" }}
-                  </th>
-                  <td>
-                    {{.Params.scholarship}}
-                  </td>
-                </tr>
-                {{end }}
-              </tbody>
-            </table>
-          </div>
+              {{if .Params.languageLevel}}
+              <tr>
+                <th>
+                  {{ i18n "languageLevel" }}
+                </th>
+                <td>
+                  {{.Params.languageLevel}}
+                </td>
+              </tr>
+              {{end }}
+              {{if .Params.scholarship}}
+              <tr>
+                <th>
+                  {{ i18n "scholarship" }}
+                </th>
+                <td>
+                  {{.Params.scholarship}}
+                </td>
+              </tr>
+              {{end }}
+            </tbody>
+          </table>
         </div>
       </div>
-    </article>
-    <article>
-      <div class="container">
-        <div class="two-columns align-items--center">
-          <div class="rich-text">
-            {{ if .Params.mainImage }}
-            <img src="/uploads/images/{{.Params.whatIsIncludedImage}}.png" class="img-fluid"   alt="{{.Params.whatIsIncludedImageAlt}}">
+    </div>
+  </article>
+  <article>
+    <div class="container">
+      <div class="two-columns align-items--center">
+        <div class="rich-text">
+          {{ if .Params.mainImage }}
+          <img src="/uploads/images/{{.Params.whatIsIncludedImage}}.png" class="img-fluid"
+            alt="{{.Params.whatIsIncludedImageAlt}}">
 
 
           {{ end }}
 
-          </div>
-          <div class="rich-text">
-            <h2>{{ i18n "whatIsIncluded" | title }}</h2>
-            {{ range ( .Params.included ) }}
-            <ul>
-              <li>
-                {{ . }}
-              </li>
-            </ul>
-            {{ end }}
-            </div>
-          </div>
         </div>
-
-
-    </article>
-
-    {{ with $data.faq.summer }}
-      <article class="h-entry faq">
-        <div class="container">
-          <h2 class="title-section">{{ i18n "commonQuestions" | title }}</h2>
-
-          <div class="questions">
-          {{ range . }}
-          <details>
-            <summary>
-              {{ .question | safeHTML | markdownify }}
-            </summary>
-            <p>{{ .answer }}</p>
-          </details>
-        {{ end }}
-          </div>
+        <div class="rich-text">
+          <h2>{{ i18n "whatIsIncluded" | title }}</h2>
+          {{ range ( .Params.included ) }}
+          <ul>
+            <li>
+              {{ . }}
+            </li>
+          </ul>
+          {{ end }}
         </div>
-      </article>
-    {{ end }}
-
-    <article class="contact-form">
-      <div class="container container--narrow ">
-        <h2 class="title-section">{{ i18n "getAQuote" }}</h2>
-        <form id="contato" name="{{.Params.formId}}" action="/contato/sucesso/" method="POST" data-netlify="true">
-          <div class="form-wrap">
-            <div class="two-columns">
-              <div class="form-group ">
-                <label for="firstName">
-                  {{ i18n "firstName" | title }} <span class="required">*</span>
-                </label>
-                <input type="text" id="firstName" name="firstName" required />
-              </div>
-              <div class="form-group ">
-                <label for="lastName">
-                  {{ i18n "lastName" | title }} <span class="required">*</span>
-                </label>
-                <input type="text" id="lastName" name="lastName" required />
-              </div>
-            </div>
-            <div class="two-columns">
-              <div class="form-group">
-                <label for="phone">
-                  {{ i18n "phone" | title }}
-                </label>
-                <input type="text" id="phone" name="phone" />
-              </div>
-              <div class="form-group">
-                <label for="whatsapp">
-                  {{ i18n "whatsApp" | title }}
-                </label>
-                <input type="text" id="whatsapp" name="whatsapp" />
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="email">
-                {{ i18n "email" | title }} <span class="required">*</span>
-              </label>
-              <input type="email" id="email" name="email" required />
-            </div>
-            <div class="form-group">
-              <label for="message">
-                {{ i18n "message" | title }} <span class="required">*</span>
-              </label>
-              <textarea id="message" name="message" required></textarea>
-            </div>
-            <div class="button-wrap button-wrap--center">
-              <button type="submit" class="button-secondary button-secondary--solid">{{ i18n "send" }}</button>
-            </div>
-          </div>
-
-        </form>
-
       </div>
-    </article>
+    </div>
 
-  </main>
 
-  {{ end }}
+  </article>
+
+  {{ if .Params.formId }}
+  <article class="contact-form">
+    <div class="container container--narrow ">
+      <h2 class="title-section">{{ i18n "getAQuote" }}</h2>
+      <form id="contato" name="{{.Params.formId}}" action="/contato/sucesso/" method="POST" data-netlify="true">
+        <div class="form-wrap">
+          <div class="two-columns">
+            <div class="form-group ">
+              <label for="firstName">
+                {{ i18n "firstName" | title }} <span class="required">*</span>
+              </label>
+              <input type="text" id="firstName" name="firstName" required />
+            </div>
+            <div class="form-group ">
+              <label for="lastName">
+                {{ i18n "lastName" | title }} <span class="required">*</span>
+              </label>
+              <input type="text" id="lastName" name="lastName" required />
+            </div>
+          </div>
+          <div class="two-columns">
+            <div class="form-group">
+              <label for="phone">
+                {{ i18n "phone" | title }}
+              </label>
+              <input type="text" id="phone" name="phone" />
+            </div>
+            <div class="form-group">
+              <label for="whatsapp">
+                {{ i18n "whatsApp" | title }}
+              </label>
+              <input type="text" id="whatsapp" name="whatsapp" />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="email">
+              {{ i18n "email" | title }} <span class="required">*</span>
+            </label>
+            <input type="email" id="email" name="email" required />
+          </div>
+          <div class="form-group">
+            <label for="message">
+              {{ i18n "message" | title }} <span class="required">*</span>
+            </label>
+            <textarea id="message" name="message" required></textarea>
+          </div>
+          <div class="button-wrap button-wrap--center">
+            <button type="submit" class="button-secondary button-secondary--solid">{{ i18n "send" }}</button>
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </article>
+  {{end}}
+
+</main>
+
+{{ end }}
