--- a/assets/stylesheets/components/_card.scss
+++ b/assets/stylesheets/components/_card.scss
@@ -62,7 +62,11 @@
   position: relative;
 
   display: block;
+
+  margin: 0;
   margin-bottom: to-rem(16px);
+
+  line-height: 0;
 
   img {
     width: 100%;
@@ -72,7 +76,6 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
 
     display: block;
 
@@ -82,5 +85,7 @@
     border: 3px solid palette('white');
 
     content: '';
+
+    transform: translate(-50%, -50%);
   }
 }
