--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -153,6 +153,17 @@ p {
 
   }
 
+  .image-topics {
+    max-width: 214px;
+
+    margin: 0 auto to-rem(16px) auto;
+
+    @media screen and (min-width: breakpoint('laptop')) {
+      margin: 0 0 to-rem(24px) 0;
+    }
+
+  }
+
   > * {
     margin-bottom: to-rem(16px);
 
