--- a/layouts/partials/high-school.html
+++ b/layouts/partials/high-school.html
@@ -16,7 +16,7 @@
           {{ end }}
           <p>{{ .content }}</p>
           {{ if .buttonUrl }}
-            <a href="{{ .buttonUrl }}" class="btn">{{ .buttonText }}</a>
+            <a href="{{ .buttonUrl }}" class="button-secondary button-secondary--solid">{{ .buttonText }}</a>
           {{ end }}
         </div>
       </div>
